prevent mobile keyboard from shifting webview up

--- a/src/features/search/layouts/SearchResultsLayout/SearchResultsLayout.module.css
+++ b/src/features/search/layouts/SearchResultsLayout/SearchResultsLayout.module.css
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
 }
+.header{
+    flex-shrink: 0;
+}
 .content{
     flex-grow: 1;
 }
